Reset Floating flag when dialog is not floating

Floating flag should be set to false when a Dialog is not anchored
to the main content.

Bug: 833466
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_vr
Change-Id: Idad148d25bc1d51e6ba2b764426d2b8dc6b380a4
Reviewed-on: https://chromium-review.googlesource.com/1024231
Reviewed-by: Biao She <bshe@chromium.org>
Commit-Queue: Amirhossein Simjour <asimjour@chromium.org>
Cr-Commit-Position: refs/heads/master@{#552868}
Former-commit-id: fb0c86e6087c4522d046d042898494e5b92fab86